cluster/apps/iot/homeassistant/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homeassistant
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:2022.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homeassistant-data
