cluster/apps/iot/homeassistant/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homeassistant
  namespace: iot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns/is-public: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: home.broetje.online
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
    - host: esphome.broetje.online
      http:
        paths:
          - backend:
              service:
                name: esphome
                port:
                  number: 6052
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home.broetje.online
        - "*.home.broetje.online"
      secretName: home-tls
